# Claw-Eval-Live

./: .gitignore  AGENTS.md  Dockerfile.agent  LICENSE  README.md  README.zh-CN.md  config_template.yaml  pyproject.toml  requirements-sandbox-server.txt
benchmark/: leaderboard.html  selected_105_tasks.json
mock_services/calendar/: server.py
mock_services/crm/: server.py
mock_services/gmail/: server.py
mock_services/helpdesk/: server.py
mock_services/notes/: server.py
mock_services/todo/: server.py
mock_services/web/: server.py
scripts/: regrade_with_judge.py  test_sandbox.sh
src/liveclaw_500/: cli.py  config.py
tasks/CTB_A01_financial_reconciliation/: grader.py  task.yaml
tasks/CTB_A02_investment_priority_matrix/: grader.py  task.yaml
tasks/CTB_A03_cashflow_risk_memo/: grader.py  task.yaml
tasks/CTB_A04_sales_promise_audit/: grader.py  task.yaml
tasks/CTB_C02_meeting_prep_brief/: grader.py  task.yaml
tasks/CTB_C06_customer_health_churn_risk/: grader.py  task.yaml
tasks/CTB_COMM_09_project_retro_prep/: grader.py  task.yaml
tasks/CTB_COMM_13_support_ticket_email_sync/: grader.py  task.yaml
tasks/CTB_COMM_18_batch3/: grader.py  task.yaml
tasks/CTB_COMM_24_meeting_prep_action/: grader.py  task.yaml
tasks/CTB_COMM_25_stakeholder_update_compile/: grader.py  task.yaml
tasks/CTB_CRM_03_renewal_priority_triage/: grader.py  task.yaml
tasks/CTB_CRM_04_lead_scoring_validation/: grader.py  task.yaml
tasks/CTB_CRM_05_upsell_opportunity_scan/: grader.py  task.yaml
tasks/CTB_CRM_08_segment_profitability/: grader.py  task.yaml
(+427 files in other folders)
