[project]
name = "liveclaw-500"
version = "1.0.0"
description = "Benchmark for evaluating AI agents on real-world computer tasks across enterprise workflows"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
sandbox = ["docker>=7.0"]
mock = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8.0"]

[project.scripts]
liveclaw-500 = "liveclaw_500.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
